Added basic styling for form

--- a/form_validator/index.html
+++ b/form_validator/index.html
@@ -9,37 +9,40 @@
   <body>
     <div class="container">
       <!-- in this example id's are used for javascript and classes for css -->
-      <form id="form" class="form"></form>
-      <h1>Register with us</h1>
-      <div class="form-control">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter username" />
-        <small>Error message</small>
-      </div>
-    </div>
-    <script src="script.js"></script>
-      <h1>Register with us</h1>
-      <div class="form-control">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter username" />
-        <small>Error message</small>
-      </div>
-      <div class="form-control">
-        <label for="email">Email</label>
-        <input type="text" id="email" placeholder="Enter email" />
-        <small>Error message</small>
-      </div>
-      <div class="form-control">
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter password" />
-        <small>Error message</small>
-      </div>
-      <div class="form-control">
-        <label for="password2">password</label>
-        <input type="password" id="password" placeholder="Enter password again" />
-        <small>Error message</small>
-      </div>
-      <button>submit</button>
+      <form id="form" class="form">
+        <h1>Register with us</h1>
+        <div class="form-control">
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="Enter username" />
+          <small>Error message</small>
+        </div>
+        <h1>Register with us</h1>
+        <div class="form-control">
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="Enter username" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="email">Email</label>
+          <input type="text" id="email" placeholder="Enter email" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Enter password" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="password2">password</label>
+          <input
+            type="password"
+            id="password"
+            placeholder="Enter password again"
+          />
+          <small>Error message</small>
+        </div>
+        <button>submit</button>
+      </form>
     </div>
     <script src="script.js"></script>
   </body>
