--- a/form_validator/index.html
+++ b/form_validator/index.html
@@ -3,20 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Validator</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <title>Form Validator</title>
   </head>
+  <!-- in this example id's are used for javascript and classes for css -->
   <body>
     <div class="container">
-      <!-- in this example id's are used for javascript and classes for css -->
       <form id="form" class="form">
-        <h1>Register with us</h1>
-        <div class="form-control">
-          <label for="username">Username</label>
-          <input type="text" id="username" placeholder="Enter username" />
-          <small>Error message</small>
-        </div>
-        <h1>Register with us</h1>
+        <h2>Register With Us</h2>
         <div class="form-control">
           <label for="username">Username</label>
           <input type="text" id="username" placeholder="Enter username" />
@@ -33,17 +28,18 @@
           <small>Error message</small>
         </div>
         <div class="form-control">
-          <label for="password2">password</label>
+          <label for="password2">Confirm Password</label>
           <input
             type="password"
-            id="password"
+            id="password2"
             placeholder="Enter password again"
           />
           <small>Error message</small>
         </div>
-        <button>submit</button>
+        <button type="submit">Submit</button>
       </form>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
